--- a/index.html
+++ b/index.html
@@ -4,48 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="Calculator.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body style="margin: 0;">
-
-    <div class="root-div">
-        <div class="main-div">
-            <div class="out-put-div">
-                <input type="text" name="" id="inp">
+<body>
+    <div class="container w-50 bg-dark-subtle p-5 mt-5 rounded-5 shadow-lg">
+        <div class="mb-5">
+            <input type="text" class="form-control" id="inp" readonly>
+        </div>
+        <div class="">
+            <div class="d-flex justify-content-between row mb-3">
+                <div class="col-3"><button onclick="clean()" class="clear btn btn-dark p-3 shadow">C</button></div>
+                <div class="col-3"><button onclick="backSpace()" class="del btn btn-danger p-3 shadow">Del</button></div>
             </div>
-            <div class="buttons-div">
-                <div class="row">
-                    <button class="button1">c</button>
-                    <button class="button1 b1">Del</button>
-                </div>
-                <div class="row">
-                    <button class="button1">7</button>
-                    <button class="button1">8</button>
-                    <button class="button1">9</button>
-                    <button class="button1">+</button>
-                </div>
-                <div class="row">
-                    <button class="button2">4</button>
-                    <button class="button2">5</button>
-                    <button class="button2">6</button>
-                    <button id="button2">x</button>
-                </div>
-                <div class="row">
-                    <button class="button3">1</button>
-                    <button class="button3">2</button>
-                    <button class="button3">3</button>
-                    <button id="button3">-</button>
-                </div>
-                <div class="row">
-                    <button id="button4">.</button>
-                    <button class="button4">0</button>
-                    <button class="button4">=</button>
-                    <button id="button4">/</button>
-                </div>
+            <div class="row mb-3">
+                <div class="col-3"><button onclick="para(7)" class="num btn btn-dark p-3 shadow">7</button></div>
+                <div class="col-3"><button onclick="para(8)" class="num btn btn-dark p-3 shadow">8</button></div>
+                <div class="col-3"><button onclick="para(9)" class="num btn btn-dark p-3 shadow">9</button></div>
+                <div class="col-3"><button onclick="para('+')" class="plu btn btn-dark p-3 shadow">+</button></div>
+            </div>
+            <div class="row mb-3">
+                <div class="col-3"><button onclick="para(4)" class="num btn btn-dark p-3 shadow">4</button></div>
+                <div class="col-3"><button onclick="para(5)" class="num btn btn-dark p-3 shadow">5</button></div>
+                <div class="col-3"><button onclick="para(6)" class="num btn btn-dark p-3 shadow">6</button></div>
+                <div class="col-3"><button onclick="para('*')" class="mult btn btn-dark p-3 shadow">x</button></div>
+            </div>
+            <div class="row mb-3">
+                <div class="col-3"><button onclick="para(1)" class="num btn btn-dark p-3 shadow">1</button></div>
+                <div class="col-3"><button onclick="para(2)" class="num btn btn-dark p-3 shadow">2</button></div>
+                <div class="col-3"><button onclick="para(3)" class="num btn btn-dark p-3 shadow">3</button></div>
+                <div class="col-3"><button onclick="para('-')" class="min btn btn-dark p-3 shadow">-</button></div>
+            </div>
+            <div class="row">
+                <div class="col-3"><button onclick="para('.')" class="dot btn btn-dark p-3 shadow">.</button></div>
+                <div class="col-3"><button onclick="para(0)" class="num btn btn-dark p-3 shadow">0</button></div>
+                <div class="col-3"><button onclick="result()" class="equal btn btn-success p-3 shadow">=</button></div>
+                <div class="col-3"><button onclick="para('/')" class="divi btn btn-dark p-3 shadow">/</button></div>
             </div>
         </div>
     </div>
-
 </body>
+<script src="./Calculator.js"></script>
 </html>
